@@ -1,3 +1,14 @@
+Mon Mar 26 13:34:50 2001  Owen Taylor  <otaylor@redhat.com>
+
+	[ Patch from DindinX  <David.Odin@bigfoot.com>, added docs ]
+ 
+ 	* gstrfuncs.c, gstrfuncs.h: Add g_stpcpy () for platform that don't
+ 	have stpcpy ().
+ 	* gstrfuncs.c (g_strjoin, g_strjoinv and g_strconcat): use
+ 	g_stpcpy () so these functions run much faster.
+ 	* config.h.win32.in, glib.def: add reference to g_stpcpy ()
+ 	* configure.in: Add a test for the stpcpy () function.
+ 
 2001-03-20  Havoc Pennington  <hp@redhat.com>
 
 	* gutf8.c (g_utf8_strlen): rewrite, based on bug #52328 from
