@@ -119,6 +119,9 @@ gchar*                g_strjoinv       (const gchar  *separator,
 void                  g_strfreev       (gchar       **str_array);
 gchar**               g_strdupv        (gchar       **str_array);
 
+gchar*                g_stpcpy         (gchar        *dest,
+                                        const char   *src);
+
 G_END_DECLS
 
 #endif /* __G_STRFUNCS_H__ */
